<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".Authorization.WelcomeActivity">
    <LinearLayout
        android:gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/returnButton"
            style="@style/returnIcon">
        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            style="@style/appIcon">
        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="0dp"
            android:gravity="center|top"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/loginEd"
                style="@style/loginEditText">
            </EditText>
            <EditText
                android:id="@+id/passwordEd"
                style="@style/passwordEditText">
            </EditText>
        </LinearLayout>
        <!--LinearLayout
        No need rn but in future
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button

                android:layout_marginTop="20dp"
                android:layout_marginLeft="80dp"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:text="Забыли пароль?"
                android:textSize="8dp"
                android:textColor="#6D1DA3"
                android:background="@null">
            </Button>
        </LinearLayout-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:paddingTop="90dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/LogInButton"
                android:text="@string/sign_in"
                style="@style/button1">
            </Button>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account">
                </TextView>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@drawable/text_button"
                    android:id="@+id/SignUpTextButton"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up">
                </TextView>
            </LinearLayout>
            <!--Button
                android:id="@+id/RegisterButton"
                android:text="@string/sign_up"
                style="@style/button1">
            </Button-->
        </LinearLayout>

    </LinearLayout>
</LinearLayout>