...
                <LinearLayout
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:checked="true"
                        android:id="@+id/saveLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </CheckBox>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
...
                    android:gravity="end"
                    android:minWidth="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:checked="true"
                        android:id="@+id/sendNotifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </CheckBox>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
...
