...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/copy_data_of_past_n_days">
        </EditText>
        <Button
            android:layout_margin="30dp"
            android:id="@+id/copyButton"
            android:text="@string/copy_data"
            style="@style/button1">
        </Button>
        <LinearLayout
            android:id="@+id/LL"
            android:orientation="horizontal"
...
