<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile.ProfileActivity">
    <LinearLayout
        android:visibility="invisible"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/settings_bu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/corgi"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:background="@null">
        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:layout_margin="20dp"
            android:src="@drawable/corgi"
            android:adjustViewBounds="true">
        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="Sashavav">
        </TextView>
        <Button
            android:id="@+id/SettingsButton"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="#C5C5C5"
            android:text="Выйти из аккаунта">
        </Button>


    </LinearLayout>
    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NumOfPosts">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center|bottom">
        <ImageButton
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:id="@+id/toDiary"/>
        <ImageButton
            android:id="@+id/toHome"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="75dp"/>
        <ImageButton
            android:id="@+id/toProfile"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="75dp"/>
    </LinearLayout>

</LinearLayout>