...
            android:orientation="vertical">
            <Button
                android:layout_marginBottom="10dp"
                android:background="@drawable/button1"
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:text="Войти"
                android:id="@+id/LogInButton">
            </Button>
            <Button
                android:layout_width="280dp"
                android:layout_height="70dp"
                android:background="@drawable/button1"
...
